# 2courseCLongArithmeric

./: CMakeLists.txt  README.md  main.cpp
include/: BigDecimal.h  bigDecimal.h
src/: BigDecimal.cpp  bigDecimalArithmeticOperators.cpp  bigDecimalConstructor.cpp  bigDecimalLogicOperators.cpp
tests/: testDiv.cpp  testLogic.cpp  testMul.cpp  testPi.cpp  tests.cpp  testsAdd.cpp  testsArithmetic.cpp
